# C-plus

./: .gitignore  README.md
cp-cli/: cplus.toml
cp-cli/src/: builder.cp  compiler.cp  main.cp
cplus/: Cargo.toml
cplus/demo_project/: cplus.toml
cplus/demo_project/src/: main.cp
cplus/my_app/: cplus.toml
cplus/my_app/src/: main.cp
cplus/src/: builder.rs  cli.rs  config.rs  main.rs
cplus/src/transpiler/: ast.rs  checker.rs  codegen.rs  lexer.rs  mod.rs  parser.rs
docs/: development_plan.md  llvm_compiler_roadmap.md  overview.md  ownership.md  ownership_alignment.md  struct_system.md  testing.md  tooling.md
projects/CP-TUI/: cplus.toml  output.txt
projects/CP-TUI/src/: main.cp
projects/alias_test/: cplus.toml
projects/alias_test/src/: main.cp
projects/clone_fix/: cplus.toml
projects/clone_fix/src/: main.cp
projects/debugPRJ1/: cplus.toml
projects/demo_project/: cplus.toml
projects/demo_project/src/: main.cp
projects/diag_test/: cplus.toml
projects/diag_test/src/: main.cp
projects/fork_fail/: cplus.toml
projects/fork_remove/: cplus.toml
projects/move_error/: cplus.toml
projects/move_error/src/: main.cp
projects/raii_test/: cplus.toml
projects/test_project/: cplus.toml
projects/test_project/src/: main.cp
tests/: basic_ownership.cp  borrow_conflict.cp  complex_test.cp  fork_fail.cp  fork_remove.cp  raii_test.cp  spawn_test.cp  test_alias.cp  test_alias_mut.cp  test_clone_fix.cp  test_diagnostics.cp  test_error.cp  test_full.cp
