[package]
name = "cplus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] } # CLI 命令行解析
anyhow = "1.0" # 错误处理
walkdir = "2.4" # 遍历目录文件
regex = "1.10" # 简单的模式匹配（初步实现）
fs_extra = "1.3" # 增强文件操作
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
